--- a/app/views/cards/searchcamera.html.erb
+++ b/app/views/cards/searchcamera.html.erb
@@ -28,3 +28,4 @@
 </div>
 <%= render 'partial/footer' %>
 <%= javascript_include_tag 'specific/searchcamera'%>
+<!--上の書き方ではこのビューで読み込むjsファイルを指定しています。application.jsではcommonディレクトリの内容はすでに読み込んでますが、このビューだけの追加で読み込むjsの指定です。-->
