ビューの修正
・mixinでanimation赤文字導入
・ボタン用scss導入
・resetcssにbuttonタグを指定

--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -64,6 +64,14 @@ var {
   font-style:normal;
   font-weight:normal;
 }
+button {
+	background: none;
+	border: none;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
 ol,
 ul {
   list-style:none;
