--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "config/variable";
 @import "config/linkConfig";
+@import "mixin/mixes";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import "modules/devise";
@@ -12,6 +13,7 @@
 @import "modules/episode_show";
 @import "modules/card_newcamerasearchcamera";
 @import "modules/group_new";
+@import "modules/btnrad";
 @import "modules/notification";
 @import "modules/partial_header";
 @import "modules/partial_footer";
