--- a/app/assets/stylesheets/modules/_card_newcamerasearchcamera.scss
+++ b/app/assets/stylesheets/modules/_card_newcamerasearchcamera.scss
@@ -43,11 +43,7 @@
         background-color:$mainWhite;
       }
       &--label{
-        // display:block;
         width:400px;
-      }
-      &--input{
-        // display:block;
       }
       input[type="text"]{
         width:100%;
@@ -61,7 +57,6 @@
     &__createbeforesearchresults{
       border:3px solid black;
       padding:10px;
-      // display:none;
       &--confbtn{
         display:inline-block;
         border-radius: 5px;
@@ -69,13 +64,14 @@
         color:$mainBlue;
         padding:3px;
         text-align:center;
+        margin-right: 5px;
         &:hover{
           border:1px solid $btnOrange;
           color:$btnOrange;
         }
       }
       &--reloadbtn{
-        display:inline;
+        display:inline-block;
         border-radius: 5px;
         border:1px solid $btnRed;
         color:black;
@@ -125,25 +121,13 @@
     }
   }
 }
-// #video_area_btn,#drawCanvas,#drawCanvas__after__form--submitbtn{
-//   animation: color-change 3s linear infinite;
-// }
 #drawCanvas__after__form--submitbtn{
   margin :0 100px;
 }
 .animationEmRed{
-  animation: color-change 3s linear infinite;
+  @include anim-color-change-3sred;
 }
-@keyframes color-change {
-  0%,100%{
-    color:black;
-  }
 
-  50%{
-    color:red;
-  }
-  
-}
 
 .newcamera{
   &__step2{
