--- a/app/assets/stylesheets/modules/_episode_show.scss
+++ b/app/assets/stylesheets/modules/_episode_show.scss
@@ -28,22 +28,13 @@
     #episode_inner__form__updatebtn{
       height:30px;
       width:200px;
-      animation: color-change 3s linear infinite;
+      @include anim-color-change-3sred;
       border-style: none;
       border:1px solid black;
       margin-bottom:10px;
       border-radius: 5px;
     }
-    @keyframes color-change {
-      0%,100%{
-        color:black;
-      }
     
-      50%{
-        color:red;
-      }
-      
-    }
     #episode_inner__startedit,
     #episode_inner__rebertedit,
     #episode_inner__backcardshowbtn{
