css リファクタリング実施
・ボタン関連のcssをまとめた(_btnrad.scss)
・buttonタグとinput[type="submit"]のresetを実施

--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -64,14 +64,6 @@ var {
   font-style:normal;
   font-weight:normal;
 }
-button {
-	background: none;
-	border: none;
-	outline: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-}
 ol,
 ul {
   list-style:none;
@@ -126,4 +118,20 @@ img{
 }
 *{
   box-sizing: border-box;
+}
+button {
+	background: none;
+	border: none;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+input[type="submit"]{
+  background: none;
+	border: none;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
