--- a/app/assets/stylesheets/modules/_card_searchnormalform.scss
+++ b/app/assets/stylesheets/modules/_card_searchnormalform.scss
@@ -8,8 +8,6 @@
     width:100%;
     margin:0 auto;
     &__form{
-      // display:flex;
-      // justify-content:flex-start;
       border:1px solid black;
       padding:0 10px;
       &__row{
@@ -17,7 +15,6 @@
         justify-content:space-around;
         margin-top:5px;
         &--label{
-          // display:block;
           width:30%
         }
         &--input{
@@ -27,17 +24,9 @@
       &__btns{
         text-align: center;
        margin-top:5px; 
-        #card__normalsearchstartbtn{
-          border-style: none;
-          width:50%;
-          border:1px solid $mainBlue;
-          border-radius:5px;
-          color:$mainBlue;
-          &:hover{
-            color:$btnOrange;
-            border-color:$btnOrange;
-          }
-        }
+      }
+      &--submit{
+        width:50%;
       }
     }
     &__results{
@@ -64,15 +53,8 @@
           margin-left:5px;
         }
         &--link{
-          border:1px solid $mainBlue;
-          border-radius:5px;
           font-size:0.8em;
           padding:5px;
-          color:$mainBlue;
-          &:hover{
-            color:$btnOrange;
-            border-color:$btnOrange;
-          }
         }
       }
     }
