--- a/app/views/cards/newcamera.html.haml
+++ b/app/views/cards/newcamera.html.haml
@@ -31,14 +31,14 @@
               / カメラ映像が描画されます。
               %video#video_area.video_area_cls{:autoplay =>"",:style => "background-color: #000"}
               / 押下するとカメラ映像から静止画をキャプチャします。
-              %button#video_area_btn.video_area_cls.btnrad.btnrad__anim{:onclick => "go_step2()"} 撮影 します
+              %button#video_area_btn.video_area_cls.btnrad.btnrad--anim{:onclick => "go_step2()"} 撮影 します
               %p.video_area_cls 上の領域に名刺の全体が映るようにして、「撮影」ボタンを押してください
             .newcamera__step2
               / キャプチャした静止画が描画されます。
               = succeed "\">" do
                 %canvas#capture_image.capture_image_cls
               %br
-              %button#drawCanvas.capture_image_cls.btnrad.btnrad__anim{:onclick => "drawCanvas()"} この画像を使用する
+              %button#drawCanvas.capture_image_cls.btnrad.btnrad--anim{:onclick => "drawCanvas()"} この画像を使用する
               %br
               %button#rebertpic_btn.capture_image_cls.btnrad.btnrad--blue{:onclick => "rebert_step1()"} 撮影をやりなおしたい
               %p.capture_image_cls
@@ -85,7 +85,7 @@
                             = f.text_field :email,class:"drawCanvas__after drawCanvas__after--input", placeholder:"メールアドレスを入力"
                           = f.hidden_field :apiresulttext,class:"drawCanvas__after drawCanvas__after__form",id: "hiddenapiresulttext"
                           = f.hidden_field :apiresulthash,class:"drawCanvas__after drawCanvas__after__form"
-                          = f.submit "名刺データを作成",id:"drawCanvas__after__form--submitbtn",class:"drawCanvas__after"
+                          = f.submit "名刺データを作成",id:"drawCanvas__after__form--submitbtn btnrad btnrad__anim",class:"drawCanvas__after"
 = render 'partial/footer'
 = javascript_include_tag 'specific/newcamera'
 // 上の書き方ではこのビューで読み込むjsファイルを指定しています。application.jsではcommonディレクトリの内容はすでに読み込んでますが、このビューだけの追加で読み込むjsの指定です。
