--- a/app/views/cards/searchcamera.html.haml
+++ b/app/views/cards/searchcamera.html.haml
@@ -17,13 +17,13 @@
       / カメラ映像が描画されます。
       %video#video_area.video_area_cls{:autoplay => "", :style => "background-color: #000"}
       / 押下するとカメラ映像から静止画をキャプチャします。
-      %button#video_area_btn.video_area_cls.btnrad.btnrad__anim{:onclick => "go_step2()"} 撮影 します
+      %button#video_area_btn.video_area_cls.btnrad.btnrad--anim{:onclick => "go_step2()"} 撮影 します
       %p.video_area_cls 上の領域に名刺の全体が映るようにして、「撮影」ボタンを押してください
       / キャプチャした静止画が描画されます。
     .searchcamera__step2
       %canvas#capture_image.capture_image_cls{:style => "display:block;"}
       %br/
-      %button#drawCanvas.capture_image_cls.btnrad.btnrad__anim{:onclick => "drawCanvas()"} この画像で検索する
+      %button#drawCanvas.capture_image_cls.btnrad.btnrad--anim{:onclick => "drawCanvas()"} この画像で検索する
       %br/
       %br/
       %button#rebertpic_btn.capture_image_cls.btnrad.btnrad--blue{:onclick => "rebert_step1()"} 撮影をやりなおしたい
