--- a/app/views/cards/searchnormalform.html.haml
+++ b/app/views/cards/searchnormalform.html.haml
@@ -22,6 +22,6 @@
         =f.label :メールアドレス,class:"searchnormform-inner__form__row--label"
         =f.text_field :email,class:"searchnormform-inner__form__row--input",placeholder:"メールアドレス"
       .searchnormform-inner__form__btns
-        =f.submit "検索開始",id:"card__normalsearchstartbtn",class:"searchnormform-inner__form--submitbtn"
+        =f.submit "検索開始",id:"card__normalsearchstartbtn",class:"searchnormform-inner__form--submit btnrad btnrad--blue"
     .searchnormform-inner__results
 = render 'partial/footer'
