css追加設定 と deviseのエラーメッセージにnickname追加

--- a/app/assets/stylesheets/modules/_btnrad.scss
+++ b/app/assets/stylesheets/modules/_btnrad.scss
@@ -13,6 +13,12 @@
       color:$btnOrange;
       border:1px solid $btnOrange;
     }
+  }&--white{
+    color:$mainWhite;
+    &:hover{
+      color:$btnOrange;
+      border:1px solid $btnOrange;
+    }
   }
   &--green{
     color:$btnGreen;
