--- a/app/assets/stylesheets/modules/_card_top.scss
+++ b/app/assets/stylesheets/modules/_card_top.scss
@@ -35,6 +35,9 @@
       &--groupnew{
         color:$btnRed;
       }
+      &:hover{
+        box-shadow:3px 3px 5px rgba(0,0,0,0.8);
+      }
     }
     &__row{
       display:flex;
