--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -40,11 +40,8 @@
       }
     }
     &--submitbtn{
-      width:200px;
-      font-size:30px;
-      &:hover{
-        color:$mainBlue;
-      }
+      font-size:20px;
+      padding:2px 2px 2px 2px;
     }
   }
 }
