--- a/app/assets/stylesheets/modules/_partial_header.scss
+++ b/app/assets/stylesheets/modules/_partial_header.scss
@@ -14,6 +14,9 @@
     font-size:20px;
     line-height:100px;
     margin-right:10px;
+    &--logout,&--login{
+      display:inline;
+    }
   }
   
 }
