--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -26,6 +26,6 @@
         = f.hidden_field :group_id, value: nil
         = f.hidden_field :owned_group_id, value: nil
       .actions
-        = f.submit "入力内容でユーザ登録します",class:"devise_body--submitbtn"
+        = f.submit "入力内容でユーザ登録します",class:"devise_body--submitbtn btnrad btnrad--blue"
     = render "devise/shared/links"
 = render 'partial/devise_footer'
