OAuth ビュー実装
OAuth認証が本番環境で機能していたので、
ビューを実装しました。
新規ユーザ登録時にも、OAuth認証ボタンを設置しています。

--- a/app/assets/stylesheets/modules/_btnrad.scss
+++ b/app/assets/stylesheets/modules/_btnrad.scss
@@ -27,6 +27,11 @@
       border:1px solid $btnOrange;
     }
   }
+  &--google{
+    color:$mainWhite;
+    background-color:$mainBlue;
+    border-color:$mainBlue;
+  }
 }
 input[type="submit"].btnrad{
   cursor:pointer;
