--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,30 +2,35 @@
 .devise_outer
   .devise_body
     %h2.devise_body__signup--title 新規ユーザ登録
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = render "devise/shared/error_messages", resource: resource
-      .field.devise_body__signup--nickname
-        = f.label "ニックネーム"
+    .devise_body__signup__form
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = render "devise/shared/error_messages", resource: resource
+        .field.devise_body__signup--nickname
+          = f.label "ニックネーム"
+          %br/
+          = f.text_field :nickname, autofocus: true
+        .field.devise_body__signup--mailaddress
+          = f.label "メールアドレス"
+          %br/
+          = f.email_field :email, autofocus: true, autocomplete: "email"
+        .field.devise_body__signup--password
+          = f.label "パスワード"
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} 文字以上)
+          %br/
+          = f.password_field :password, autocomplete: "new-password"
+        .field.devise_body__signup--password
+          = f.label "パスワード(再入力してください)"
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "new-password"
+          = f.hidden_field :group_id, value: nil
+          = f.hidden_field :owned_group_id, value: nil
         %br/
-        = f.text_field :nickname, autofocus: true
-      .field.devise_body__signup--mailaddress
-        = f.label "メールアドレス"
-        %br/
-        = f.email_field :email, autofocus: true, autocomplete: "email"
-      .field.devise_body__signup--password
-        = f.label "パスワード"
-        - if @minimum_password_length
-          %em
-            (#{@minimum_password_length} 文字以上)
-        %br/
-        = f.password_field :password, autocomplete: "new-password"
-      .field.devise_body__signup--password
-        = f.label "パスワード(再入力してください)"
-        %br/
-        = f.password_field :password_confirmation, autocomplete: "new-password"
-        = f.hidden_field :group_id, value: nil
-        = f.hidden_field :owned_group_id, value: nil
-      .actions
-        = f.submit "入力内容でユーザ登録します",class:"devise_body--submitbtn btnrad btnrad--blue"
+        .actions
+          = f.submit "入力内容でユーザ登録します",class:"devise_body__signup__form--submitbtn btnrad btnrad--blue"
+    .devise_body__login__googlebtn.btnrad.btnrad--google
+      = icon('fab','google',class:'container-main__0auth--google--icon')
+      = link_to '入力せずにGoogleアカウントでログインする', user_google_oauth2_omniauth_authorize_path
     = render "devise/shared/links"
 = render 'partial/devise_footer'
